--- a/SlidingWindow.ipynb
+++ b/SlidingWindow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl7nhFi3DeUnWN3K53rxzq",
+      "authorship_tag": "ABX9TyM2U/JDxn5lhJ3q/z6vfhui",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +95,93 @@
         "                j=j+1\n",
         "        return max(lst)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **find the first negative integer for each and every window**\n",
+        "\n",
+        "Given an array A[] of size N and a positive integer K, find the first negative integer for each and every window(contiguous subarray) of size K.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Example 1:\n",
+        "\n",
+        "Input :\n",
+        "N = 5\n",
+        "A[] = {-8, 2, 3, -6, 10}\n",
+        "K = 2\n",
+        "Output :\n",
+        "-8 0 -6 -6\n",
+        "Explanation :\n",
+        "First negative integer for each window of size k\n",
+        "{-8, 2} = -8\n",
+        "{2, 3} = 0 (does not contain a negative integer)\n",
+        "{3, -6} = -6\n",
+        "{-6, 10} = -6\n",
+        "\n",
+        "Example 2:\n",
+        "Input :\n",
+        "N = 8\n",
+        "A[] = {12, -1, -7, 8, -15, 30, 16, 28}\n",
+        "K = 3\n",
+        "Output :\n",
+        "-1 -1 -7 -15 -15 0\n",
+        "\n",
+        "\n",
+        "Your Task:  \n",
+        "You don't need to read input or print anything. Your task is to complete the function printFirstNegativeInteger() which takes the array A[], its size N and an integer K as inputs and returns the first negative number in every window of size K starting from the first till the end. If a window does not contain a negative integer , then return 0 for that window.\n",
+        "\n",
+        "\n",
+        "Expected Time Complexity: O(N)\n",
+        "Expected Auxiliary Space: O(K)"
+      ],
+      "metadata": {
+        "id": "KoLvoT7KNDxX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def printFirstNegativeInteger( A, N, K):\n",
+        "    # code here\n",
+        "    ans = []\n",
+        "    Di = []\n",
+        "    for i in range(N):\n",
+        "            if A[i] < 0:\n",
+        "                Di.append(i)\n",
+        "\n",
+        "            if i - K + 1 >= 0:\n",
+        "                if Di and Di[0] < i - K + 1:\n",
+        "                    Di.pop(0)\n",
+        "\n",
+        "                ans.append(A[Di[0]] if Di else 0)\n",
+        "\n",
+        "    return ans\n"
+      ],
+      "metadata": {
+        "id": "lAhIjowgNDAz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5t0VgGkjOSU_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rRH6ny3sOTCB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
