--- a/Practice_OopS.ipynb
+++ b/Practice_OopS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdoqpNRksjn0EWMu1DafBn",
+      "authorship_tag": "ABX9TyM0XL/E6roSi/+wY1s6s1P5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "9pHjeeBfH9ig"
       },
@@ -38,8 +38,7 @@
         "  msg=\"Good Morning\" #class Variable\n",
         "  def say(self):\n",
         "    print(self.msg)\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
@@ -53,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G59FIp6ZIPyY",
-        "outputId": "a8515286-566e-4e8b-927d-c5cd2a5328a7"
+        "outputId": "9a3978b1-f712-40ad-9265-7f877b08d31d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +77,7 @@
       "metadata": {
         "id": "ojd5E-M1ITSH"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lsLNmawxKuK1",
-        "outputId": "a0eb0521-9296-420b-8577-f4c11c17f1c3"
+        "outputId": "8011dd8f-5946-448b-93e1-bececa9f8186"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,12 +116,13 @@
       "metadata": {
         "id": "BhzlyffgK3Ne"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "dict('ars','21')"
       ],
       "metadata": {
@@ -130,19 +130,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t-G9RNDxPiiE",
-        "outputId": "d0013b67-501b-4eb9-c425-3b2bde5377b2"
+        "outputId": "3a483b6d-b4dc-449b-e91d-cad34ecdc1cb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<__main__.dict at 0x7d639bd5e8f0>"
+              "<__main__.dict at 0x7d6a6ab20ee0>"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 6
         }
       ]
     },
@@ -156,15 +156,60 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gYUQ81ISPlI7",
-        "outputId": "5ce5974d-1c14-48bd-ddd6-5a79cf521927"
+        "outputId": "a1cdde89-774a-49f9-a6cb-03e0aa36e909"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "ars 21\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MathOps:\n",
+        "  @staticmethod\n",
+        "  def add(a,b):\n",
+        "    return a+b\n",
+        "  @staticmethod\n",
+        "  def sub(a,b):\n",
+        "    return a-b"
+      ],
+      "metadata": {
+        "id": "YGy9xjw2ctLN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "obj=MathOps()\n",
+        "res=obj.add(10,20)\n",
+        "res2=obj.sub(10,20)\n",
+        "print(res)\n",
+        "print(res2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oX3OfcHmc3R1",
+        "outputId": "9bd75518-3118-458a-c9d9-9a57d7e0ade1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "-10\n"
           ]
         }
       ]
@@ -221,7 +266,7 @@
         "id": "rjq0i2hHSo6j",
         "outputId": "e746dc1d-f633-4a43-b7c6-1be821539a23"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +296,7 @@
       "metadata": {
         "id": "O6-JBBUXYQC-"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,7 +314,7 @@
         "id": "FbGmNQzaYmRv",
         "outputId": "c122a9c7-608f-471d-abde-310118f9a25f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,9 +328,318 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "class Ars():\n",
+        "  name=\"\"\n",
+        "  def eat(self):\n",
+        "    print(\"I am eating\")\n",
+        "class Ks(Ars):\n",
+        "  def display():\n",
+        "    print(\"My name\"+self.name)\n",
+        "la=Ars()\n",
+        "la.name=\"Ars\"\n",
+        "la.eat()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "De7V5To0Y1ty",
+        "outputId": "ec86517f-3656-4400-f242-4745e989cefd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am eating\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Anmol:\n",
+        "  m=1000\n",
+        "  def show(self):\n",
+        "    print(\"Ins Papa\")\n",
+        "  @classmethod\n",
+        "  def money(cls):\n",
+        "    print(\"Cls papa\")\n",
+        "  @staticmethod\n",
+        "  def stat():\n",
+        "    a=5\n",
+        "    print(\"stat\")"
+      ],
+      "metadata": {
+        "id": "yTxos2j2k7xr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Ankush(Anmol):\n",
+        "  def son(self):\n",
+        "    print(\"Son\")"
+      ],
+      "metadata": {
+        "id": "Lz37aObRn-3k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S=Ankush()\n",
+        "S.show()\n",
+        "S.money()\n",
+        "S.stat()"
+      ],
+      "metadata": {
+        "id": "Tjm--x3HoE3E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Fill():\n",
+        "  def __init__(self,n,m):\n",
+        "    self.n,self.m=n,m\n",
+        "    print(self.n,self.m)\n",
+        "class Emp(Fill):\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "TXBAoWhG6xLq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Fill('ars','21')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mJ5I_ALp68Rv",
+        "outputId": "7419151e-49d8-4271-e720-71138b7ee4d7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ars 21\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.Fill at 0x7d6a4dce2d10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class F:\n",
+        "  def __init__(self):\n",
+        "    self.money=2000\n",
+        "    print(\"f cons\")\n",
+        "class S(F):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.money=3000\n",
+        "    print(\"s cons\")\n",
+        "  def display(self):\n",
+        "    print(self.money)\n"
+      ],
+      "metadata": {
+        "id": "Xt429lzQ7APQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=S()\n",
+        "c.display()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bh_m4i5e8PMB",
+        "outputId": "b95be7ae-b799-48ed-d6dd-ab277f601b0a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "f cons\n",
+            "s cons\n",
+            "3000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class A:\n",
+        "    def method(self):\n",
+        "      print(\"a\")\n",
+        "\n",
+        "class B(A):\n",
+        "    pass\n",
+        "\n",
+        "class C(A):\n",
+        "    pass\n",
+        "\n",
+        "class D(B, C):\n",
+        "    pass\n",
+        "d=D()\n",
+        "print(D.mro())\n",
+        "print(d.method())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g_BDVnsw8wix",
+        "outputId": "ba753162-493e-405a-af8e-130b5e608155"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[<class '__main__.D'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.A'>, <class 'object'>]\n",
+            "a\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Std:\n",
+        "  def __init__(self,n,m):\n",
+        "    self.n,self.m=n,m\n",
+        "  def __add__(self,other):\n",
+        "    m=self.m + other.m\n",
+        "    n=self.n + other.n\n",
+        "    s3=Std(m,n)\n",
+        "    return s3"
+      ],
+      "metadata": {
+        "id": "V8OaBu4aDRLG"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1=Std(58,59)\n",
+        "s2=Std(60,65)\n",
+        "s3=s1+s2\n",
+        "print(s3.m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dpegqWwXGwJ5",
+        "outputId": "15efd2ce-f0d6-4d91-b765-a9d7d6c6259f"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "118\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from abc import ABC, abstractmethod\n",
+        "class Cmoputer(ABC):\n",
+        "  @abstractmethod\n",
+        "  def process(self):\n",
+        "    pass\n",
+        "  def start(self):\n",
+        "    print(\"Computer Started\")\n",
+        "class Laptop(Cmoputer):\n",
+        "  def process(self):\n",
+        "    print(\"Running1\")\n",
+        "class Desktop(Cmoputer):\n",
+        "  def process(self):\n",
+        "    print(\"Running2\")"
+      ],
+      "metadata": {
+        "id": "bw9W0W0ZG5DX"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "com1=Laptop()\n",
+        "com2=Desktop()\n",
+        "com1.start()\n",
+        "com2.process()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J_RXKVkxNzxp",
+        "outputId": "e42b29db-2e8e-4367-ecba-caaba3ac8834"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Computer Started\n",
+            "Running2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "De7V5To0Y1ty"
+        "id": "u4lnvl-NN_Sa"
       },
       "execution_count": null,
       "outputs": []
